Green square isn't aligning correctly but otherwise its looking pretty decent.

--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: "Dina";
-    src: url("resources/font/DinaRemasterII-01.woff2") format("woff2"),
-    url("resources/font/DinaRemasterII-01.woff") format("woff"),
+    src: url("./resources/font/dinaRemasterii-01_1-webfont.woff2") format("woff2"),
+    url("./resources/font/dinaRemasterii-01_1-webfont.woff") format("woff"),
     url("./resources/font/DinaRemasterII-01.ttf") format("truetype");
 }
 
 body {
-    font-family: "Dina";
+    font-family: "Dina", serif;
 }
 
 .root {
     width: 100%;
     background: #dcdee5;
-    font-family: "Dina";
+    font-family: "Dina", serif;
 }
